--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -38,7 +38,7 @@
     "react-hook-form": "^7.48.2",
     "@hookform/resolvers": "^3.3.2",
     "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
+
     "swr": "^2.2.4",
     "socket.io-client": "^4.7.4",
     "react-helmet-async": "^1.3.0",
@@ -79,9 +79,7 @@
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
-    "storybook": "^7.5.3",
-    "msw": "^2.0.8",
-    "@mswjs/data": "^2.0.8"
+    "storybook": "^7.5.3"
   },
   "engines": {
     "node": ">=18.0.0",
